# myclass

./: .gitmodules  CMakeLists.txt  DEBUG_LOG  INSTALL  Makefile  classescollector.rb  configure  dependcollector.rb  exc_list  function.cmake  gendependent.rb  main.rake  myclass.exvim  rakefile  rakefile.example  update  work_list
Bnode/: Bnode.h
Btree/: Btree.h
CMakeModules/: FindGalpWrapper.cmake
Interp2D/: Interp2D.cc  Interp2D.h
RK/: Makefile  RK.cc  RK.h  exam  example.cc
Table2D/: Table2D.cc  Table2D.h
anaspec/: Makefile  anaspec.cc  anaspec.h
anaspec/enumdef/: branch_choice.def  product_choice.def
anaspec_pppc/: anaspec_pppc.cc  anaspec_pppc.h
chi2prop/: chi2prop.cc  chi2prop.h
chisq/: chisq.cc  chisq.h
create_source/: create_source.cc  create_source.h
enum_utils/: enum_utils.h
exp_data/: exp_data.cc  exp_data.h
gaussrand/: gaussrand.cc  gaussrand.h  test.cc
gfunction/: gfunction.cc  gfunction.h
interp/: Makefile  interp.cc  interp.h  interph.bak
iteration/: Makefile  exam  example.cc  iteration.cc  iteration.h
load_dat/: load_dat.cc  load_dat.h  plotexpdata.rb  show  shownum.cc
load_dat/enumdef/: bcexpname.def  beexpname.def  carbexpname.def  eleexpname.def  heliumexpname.def  pbarexpname.def  posifexpname.def  positexpname.def  ppexpname.def  protexpname.def  totexpname.def
mcparas/: mcparas.cc  mcparas.h
mcparas/enumdef/: dm_mode.def  errtype.def  inject_mode.def  mix_branch.def  pppc_or_us.def  prop_mode.def
mydebug/: mydebug.h
oformat/: oformat.h
propagator/: Makefile  prop  propagator.cc  propagator.h
quadrature/: polint.cc  qadaptive.cc  qromb.cc  qromo.cc  qsimp.cc  quadrature.h
smooth/: smooth.cc  smooth.h
solar_mod/: solar_mod.cc  solar_mod.h  solar_modbak.h
spectrum/: here  spectrum.cc  spectrum.h
sundries/classtest/: Bnode.h  Btree.h  Interp2D.cc  Interp2D.h  Makefile  Table2D.cc  Table2D.h
sundries/oldclass/interp2D/: Makefile  interp  interp2D.cc  interp2D.h
sundries/oldclass/table2D/: table2D.cc  table2D.h
sundries/solarmodulation/: Makefile  README  RK.cc  ffd_solar_mod.cc  ffd_solar_mod.h  gfunction.cc  gfunction.h  interp.cc  interp.h  solar_mod.cc  solar_test.cc  spectrum.cc  spectrum.h  sym_solar_mod.cc  sym_solar_mod.h
sym_solar_mod/: Makefile  before  bestplotDR  force  solar_test.cc  sym_solar_mod.cc  sym_solar_mod.h  symmod  symmodbf  temp1  temp2  temp3  temp6  tempp
template_writer/: template_writer.cc  template_writer.h
tridiagmatrix/: tridiagmatrix.h
vec_utils/: vec_utils.cc  vec_utils.h
