cmake_minimum_required(VERSION 3.0.2)
project(myclass CXX)

# By default CMake will install myclass to ~/ on Linux/Mac
# unless you override the install location manually. You can do this
# either by either running:
#  cmake -DCMAKE_INSTALL_PREFIX=/path/to/dir ..
# or by uncommenting and modifying this variable:
#SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}")

#=============================================================================
# All done editing

#EXECUTE_PROCESS(COMMAND "echo" "$HOME" OUTPUT_VARIABLE HOME)
SET(myclass_VERSION "0.0")

INCLUDE("function.cmake")

SET(CMAKE_CXX_FLAGS "-O2 -std=c++0x ${CMAKE_CXX_FLAGS}")
SET(COMPILE_LOG "${CMAKE_BINARY_DIR}/.myclass.auto.cmake")
STRING(REPLACE " " ";" CMAKE_CXX_FLAGS_LIST ${CMAKE_CXX_FLAGS})

MESSAGE("The compiling options set as:")
MESSAGE(STATUS "INSTALL PREFIX::                                        CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
MESSAGE(STATUS "Compiling flag::                                        CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
MESSAGE(STATUS "The class that would be excluded when compiling::       EXCLUDE = ${EXCLUDE}")
MESSAGE(STATUS "The class that you want to open the debug option::      DLIST = ${DLIST}")
MESSAGE(STATUS "The debug option: ['', '-D_DEBUG', '-DDEBUG_TO_FILE']:: DEBUG = ${DEBUG}")
MESSAGE(STATUS "The direction that Galpwrapper installed::              GALPWRAPPER = ${GALPWRAPPER}")
MESSAGE(STATUS "Supported flag: [NO_ROOT]::                             FLAGS = ${FLAGS}")
ADOPT_FLAGS("${FLAGS}")

SET(WORKLIST chi2prop mcparas anaspec_zhou)
SET(SUBMODULES antinucleus dm_production interpolator utils)
LIST(APPEND SUBMODULES ".")

FOREACH(module IN LISTS SUBMODULES)
  GET_FILENAME_COMPONENT(mdir ${CMAKE_SOURCE_DIR}/${module} ABSOLUTE)
  ADD_SUBMODULE("${mdir}" HEAD "${HEAD}" CLASS "${CLASS}")
ENDFOREACH(module)

FOREACH(inc IN LISTS HEAD)
  INCLUDE_DIRECTORIES(${inc})
ENDFOREACH(inc)

FUNCTION(ADD_CUSTOM class CXX_FLAGS target)
  GET_FILENAME_COMPONENT(basename ${class} NAME)

  FILE(RELATIVE_PATH relative ${CMAKE_SOURCE_DIR} ${class})
  SET(CMAKE_CURRENT_BINARY_DIR
    ${CMAKE_BINARY_DIR}/CMakeFiles/${target}.dir/${relative})

  SET(source ${class}/${basename}.cc)
  SET(obj ${CMAKE_CURRENT_BINARY_DIR}/${basename}.cc.o)

  ADD_CUSTOM_COMMAND(OUTPUT ${obj} COMMAND ${CMAKE_CXX_COMPILER} ARGS ${CXX_FLAGS}
    -o ${obj} -c ${source})
ENDFUNCTION(ADD_CUSTOM)

FOREACH(cls IN LISTS CLASS)
  GET_FILENAME_COMPONENT(basename ${cls} NAME)
  LIST(FIND EXCLUDE ${basename} exindex)
  GET_CXX_FLAGS(${cls} "${CMAKE_CXX_FLAGS_LIST}" "${DLIST}" "${DEBUG}"
    TMPFLAGS)

  IF(exindex EQUAL -1)
    LIST(FIND WORKLIST ${basename} index)
    IF(index EQUAL -1)
      LIST(APPEND SRCLIN ${cls}/${basename}.cc)
      ADD_CUSTOM(${cls} "${TMPFLAGS}" "lins")
    ELSE(index EQUAL -1)
      LIST(APPEND SRCWORK ${cls}/${basename}.cc)
      ADD_CUSTOM(${cls} "${TMPFLAGS}" "works")
    ENDIF(index EQUAL -1)
  ENDIF(exindex EQUAL -1)
ENDFOREACH(cls)

ADD_LIBRARY(lins STATIC ${SRCLIN})
#ADD_LIBRARY(works STATIC ${SRCWORK})

EXECUTE_PROCESS(COMMAND echo "# This cmake is automatically generated by myclass, it
# include the information of the myclass compilation." OUTPUT_FILE ${COMPILE_LOG})
WRITE_OPTION(FLAGS "${FLAGS}")

FOREACH(cls IN LISTS HEAD)
  GET_FILENAME_COMPONENT(basename ${cls} NAME)
  LIST(APPEND CLSDIR ${cls}/)
ENDFOREACH(cls IN LISTS HEAD)

INSTALL(DIRECTORY ${CLSDIR} DESTINATION include
  FILES_MATCHING REGEX "(.*[.]h|.*[.]def)"
  PATTERN "*_data" EXCLUDE)
INSTALL(DIRECTORY ${CLSDIR} DESTINATION lib
  FILES_MATCHING REGEX "_data"
  REGEX "(.*[.]h|.*[.]def|enumdef)" EXCLUDE)
INSTALL(FILES ${COMPILE_LOG} DESTINATION share)
INSTALL(TARGETS lins LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
